examples/python-web-app/deployment.yml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: python-web-app-deployment
  labels:
    app: python-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-web-app
  template:
    metadata:
      labels:
        app: python-web-app
    spec:
      containers:
      - name: pratikd21
        image: pratikd21/python-wb:v1
        volumeMounts:
        - name: db-connection
          mountPath: "/opt/db"
#         subPath: db
        - name: secret-volume
          mountPath: "/opt/sc"
#         subPath: sc
#        env:
#        - name: DB-PORT
#          valueFrom:
#            configMapKeyRef:
#              name: test-cm
#              key: db-port
        ports:
        - containerPort: 8000
      volumes:
      - name: db-connection
        configMap:
          name: test-cm
      - name: secret-volume
        secret:
          secretName: test-secret
