examples/python-web-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-web-app-service
spec:
  selector:
    app: python-web-app
  ports:
    - protocol: TCP
      port: 90
      targetPort: 8000
