examples/python-web-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/demo"
        backend:
          service:
            name: python-web-app-service
            port:
              number: 80
      - pathType: Prefix
        path: "/admin"
        backend:
          service:
            name: python-web-app-service
            port:
              number: 90
